Ask a choice both of its questions in the reading that answers them
An opening held what a reading could not show the alternatives preserve,
and where an author is sent for it stood beside it as two loose sets. The
sets were the values' and nothing in their type said so, which is why the
ends' half was never written: every neighbour had a reading and they did
not.

So they move inside the opening, which already carries a reading. A maker
is handed one reading's width and one reading's two accounts and can build
nothing out of a mixture, and the choice's opening is now one per reading
and nothing else.

The ends' road is still not routed. Turning it on sends an author to a
choice wherever its alternative placed no end, and a disequality places
none — so a bound beside one comes out as an alternative nothing could
read. The account of the ends has no site to name a choice with either.
Both are written down where they stand.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>